docs/v4.0.0/_sources/gallery/single/footprint.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/footprint.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_footprint.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_footprint.py:


Scatterer Footprint Calculation and Visualization
=================================================

This example demonstrates how to compute and visualize the footprint of a scatterer using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 7-48



.. image-sg:: /gallery/single/images/sphx_glr_footprint_001.png
   :alt: Scatterer Footprint
   :srcset: /gallery/single/images/sphx_glr_footprint_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2026-01-21 17:48:23,439 INFO Substituting symbol \mu from STIXNonUnicode
    2026-01-21 17:48:23,472 INFO Substituting symbol \mu from STIXNonUnicode






|

.. code-block:: Python


    # Import necessary components from PyMieSim
    from PyMieSim.units import ureg
    from PyOptik import Material

    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.detector import CoherentMode
    from PyMieSim.single.source import Gaussian
    from PyMieSim.single.representations import Footprint

    source = Gaussian(
        wavelength=1 * ureg.micrometer,
        polarization=0 * ureg.degree,
        optical_power=1 * ureg.watt,
        NA=0.3 * ureg.AU,
    )

    scatterer = Sphere(
        diameter=2 * ureg.micrometer,
        source=source,
        medium_refractive_index=1.0 * ureg.RIU,
        refractive_index=1.8 * ureg.RIU,
    )

    detector = CoherentMode(
        mode_number="HG02",
        NA=0.3 * ureg.AU,
        sampling=200,
        gamma_offset=0 * ureg.degree,
        phi_offset=0 * ureg.degree,
        rotation=0 * ureg.degree,
        medium_refractive_index=1.0 * ureg.RIU,
    )

    footprint = Footprint(
        scatterer=scatterer,
        detector=detector,
        sampling=100,
    )

    figure = footprint.plot()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.521 seconds)


.. _sphx_glr_download_gallery_single_footprint.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: footprint.ipynb <footprint.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: footprint.py <footprint.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: footprint.zip <footprint.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
