docs/v5.0.0/_sources/gallery/single/footprint.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/footprint.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_footprint.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_footprint.py:


Scatterer Footprint Calculation and Visualization
=================================================

This example demonstrates how to compute and visualize the footprint of a scatterer using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 7-49



.. image-sg:: /gallery/single/images/sphx_glr_footprint_001.png
   :alt: Scatterer Footprint
   :srcset: /gallery/single/images/sphx_glr_footprint_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    from PyMieSim.units import ureg

    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.detector import CoherentMode
    from PyMieSim.single.source import Gaussian
    from PyMieSim.polarization import PolarizationState
    from PyMieSim.single.setup import Setup

    polarization_state = PolarizationState(angle=0 * ureg.degree)

    source = Gaussian(
        wavelength=1 * ureg.micrometer,
        polarization=polarization_state,
        optical_power=1 * ureg.watt,
        numerical_aperture=0.3,
    )

    scatterer = Sphere(
        diameter=2 * ureg.micrometer,
        medium=1.0,
        material=1.8,
    )

    detector = CoherentMode(
        mode_number="HG02",
        numerical_aperture=0.3,
        sampling=200,
        gamma_offset=0 * ureg.degree,
        phi_offset=0 * ureg.degree,
        rotation=0 * ureg.degree,
        medium=1.0,
    )

    setup = Setup(
        scatterer=scatterer,
        source=source,
        detector=detector,
    )

    footprint = setup.get_representation("footprint", sampling=100)

    figure = footprint.plot()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.468 seconds)


.. _sphx_glr_download_gallery_single_footprint.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: footprint.ipynb <footprint.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: footprint.py <footprint.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: footprint.zip <footprint.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
